--- a/assets/sass/modules/_cookie-banner.scss
+++ b/assets/sass/modules/_cookie-banner.scss
@@ -63,7 +63,7 @@
 
 .merchant-cookie-banner-floating{
   bottom: 35px;
-  z-index: 91;
+  z-index: 997;
 
   .merchant-cookie-banner-inner{
     margin: 0 auto;
@@ -75,7 +75,7 @@
 }
 
 .merchant-cookie-banner-fixed-bottom{
-  z-index: 93;
+  z-index: 999;
 }
 
 .merchant-cookie-banner-content{
