--- a/assets/sass/modules/_scroll-to-top.scss
+++ b/assets/sass/modules/_scroll-to-top.scss
@@ -5,7 +5,7 @@
   cursor: pointer;
   line-height: 1;
   position: fixed;
-  z-index: 92;
+  z-index: 998;
   bottom: var(--merchant-bottom-offset, 30px);
   opacity: 0;
   visibility: hidden;
